# DL_deploy

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  README_zh-CN.md  compile.sh  main.cpp
core/include/common/: backend.hpp  backendFactory.hpp  backendFactory1.hpp  simpleLogger.hpp
core/include/onnxruntimeBackend/: onnxruntimeBackend.hpp
core/include/tensorrtBackend/: tensorrtBackend.hpp
core/include/torchBackend/: torchBackend.hpp
core/src/onnxruntimeBackend/: onnxruntimeBackend.cpp
core/src/tensorrtBackend/: tensorrtBackend.cpp
core/src/torchBackend/: torchBackend.cpp
examples/classification/include/: imgCls.hpp  img_cls.hpp
examples/classification/src/: imgCls.cpp  img_cls.cpp
examples/detection/include/: detectUtils.hpp  yolov5.hpp
examples/detection/src/: detectUtils.cpp  yolov5.cpp
python_packages/: README.md  README_zh-CN.md
python_packages/classification/: classification.yaml  cls_infer.py  export.py
python_packages/common/: multibackend_infer.py
python_packages/detection/: yolov5.yaml  yolov5_export.py  yolov5_infer.py
python_packages/face_recognition/: export.py  face.yaml  face_infer.py
python_packages/tools/: __init__.py  get_logger.py  load_yamls.py
